# vigil

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  vigil.yaml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/github-resolver/: index.html
api/license-db/: index.html
api/models/: index.html
api/reporter/: index.html
api/scanner/: index.html
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md  makefile.md  policy.md  testing.md
docs/api/: github-resolver.md  index.md  license-db.md  models.md  reporter.md  scanner.md
getting-started/: index.html
makefile/: index.html
policy/: index.html
prerelease_tests/: 01_pytest_full.txt  02_pytest_coverage.txt  05_vigil_self_scan.html  05_vigil_self_scan.json  05_vigil_self_scan_terminal.txt  06_vigil_react_scan.html  06_vigil_react_scan.json  06_vigil_react_scan_terminal.txt  coverage.xml  pytest_results.xml  summary.md
search/: search_index.json
testing/: index.html
tests/: conftest.py  test_github_resolver.py  test_license_db.py  test_models.py  test_package_resolver.py  test_policy_yaml.py  test_reporter.py  test_scanner.py  test_vigil.py
vigil-cli/: README.md  pyproject.toml
vigil-cli/src/vigil_cli/: main.py
vigil-core/: README.md  pyproject.toml
vigil-core/src/vigil_core/: __init__.py  github_resolver.py  license_db.py  models.py  package_resolver.py
vigil-licenses/: README.md  pyproject.toml
vigil-licenses/src/vigil_licenses/: __init__.py  reporter.py  scanner.py
