[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-cli"
version = "0.1.0"
description = "Command-line interface for the Vigil compliance toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Schmidt Peter Daniel", email = "peterschmidt5575@gmail.com" }]
keywords = ["compliance", "cli", "license", "sbom", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
requires-python = ">=3.9"
dependencies = [
    "vigil-core>=0.1.0",
    "vigil-licenses>=0.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
vigil = "vigil_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil_cli"]
