[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-core"
version = "1.0.0"
description = "Core shared library for the Vigil compliance toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Schmidt Peter Daniel", email = "peterschmidt5575@gmail.com" }]
keywords = ["compliance", "license", "sbom", "supply-chain", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/schmidtpeterdaniel/vigil"
Documentation = "https://vigil.readthedocs.io"
Repository = "https://github.com/schmidtpeterdaniel/vigil"
Issues = "https://github.com/schmidtpeterdaniel/vigil/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil_core"]
