[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-licenses"
version = "0.1.0"
description = "License conflict detection and compliance reporting for Python projects"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["license", "compliance", "open-source", "spdx", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "vigil-core>=0.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vigil"
Repository = "https://github.com/yourusername/vigil"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil_licenses"]
